--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio000/ej0.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio000/ej0.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caja en CSS</title>
-    <link rel="stylesheet" href="../2EV/css/syles.css"> <!--link linka, rel establece el tipo de relacion y el otro es la referencia-->
+    <link rel="stylesheet" href="styles.css"> <!--link linka, rel establece el tipo de relacion y el otro es la referencia-->
 </head>
 
 <body>
