Update CSS exercise
Hasta el ejercicio 2

--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio002/EJ2.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio002/EJ2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>HTML &amp; CSS: Curso práctico avanzado</title>
 
-<link rel="stylesheet" href="../2EV/css/styles2.css">
+<link rel="stylesheet" href="styles002.css">
 
 </head>
 <body>
