--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio001/Ej1.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio001/Ej1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>HTML &amp; CSS: Curso práctico avanzado</title>
-<link rel="stylesheet" href="../2EV/css/styles1.css">
+<link rel="stylesheet" href="styles001.css">
 </head>
 <body>
 <h1>HTML &amp; CSS: Curso práctico avanzado</h1>
