--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio006/Ej6.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio006/Ej6.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicios con Pseudoselectores</title>
 
-    <link href="css/styles6.css" type="text/css" rel="stylesheet" />
+    <link href="estilos.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
