--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio005/Ej5.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio005/Ej5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PseudoSelectores</title>
 
-    <link rel="stylesheet" href="css/styles5.css" type="text/css" />
+    <link rel="stylesheet" href="estilos.css" type="text/css" />
 </head>
 
 <body>
