--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio010/Ej10.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio010/Ej10.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centrado de Elementos</title>
 
-    <link rel="stylesheet" type="text/css" href="css/estilos10.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -23,6 +23,12 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, iure obcaecati odit consequuntur magni ipsum
             repellat praesentium non assumenda autem quia amet libero eveniet numquam esse mollitia aliquid voluptatum
             maxime!</p>
+        <p>
+            Hola texto de ejemplo
+        </p>
+    <p>
+        Hola
+    </p>
     </div>
 
    
