--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio016/Ej16.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio016/Ej16.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Documento sin título</title>
-<link href="css/estilos16.css" rel="stylesheet" type="text/css">
+<link href="estilos16.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
