--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio012/Ej12.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio012/Ej12.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elementos Flotantes</title>
 
-    <link rel="stylesheet" type="text/css" href="css/estilos12.css" />
+    <link rel="stylesheet" type="text/css" href="estilos012.css" />
   </head>
 
   <body>
