--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio013/ej13.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio013/ej13.html
@@ -2,14 +2,17 @@
 <html lang="es">
     <head>
         <title>Ejercicio 13</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
         <div class="container">
-            <div class="sidebar">a</div>
-            <div class="article">b</div>
-            <footer>d</footer>
-            <div class="cb">c</div>
+            <div class="sidebar"></div>
+            <div class="article"></div>
+            <div class="article"></div>
+            <div class="article"></div>
+            <footer></footer>
+            <div id="cb"></div>
+            
         </div>
     </body>
 
