--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio016/Ej16.html
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio016/Ej16.html
@@ -48,25 +48,129 @@
        	      </ul>
         	</nav>
         	<div id="noticias">
-            	<div id="noticiasarriba">
-                	<div class="noticiaarriba"></div>
-                	<div class="noticiaarriba"></div>
-                	<div class="noticiaarriba"></div>
-                </div>
-                <div id="noticiasabajo">
-                	<div class="noticiaabajo"></div>
-                	<div class="noticiaabajo"></div>
-                	<div class="noticiaabajo"></div>
-                	<div class="noticiaabajo"></div>
-                </div>
-            </div>
+				<div id="noticiasarriba">
+					<div class="noticiaarriba">
+						<p class="titulo">Noticia destacada</p>
+						<img src="img/destacada1.jpg" alt="Señor"/>
+						<p class="descripcion">
+							Los supermercados Covirán siguien dando pasos en materia de
+							responsabilidad y eficiencia
+						  </p>
+					</div>
+					<div class="noticiaarriba">
+						<p class="titulo">Especial destacado</p>
+						<img src="img/destacada2.jpg" alt="Logo"/>
+							<p class="descripcion">
+							Los supermercados Covirán siguien dando pasos en materia de
+							responsabilidad y eficiencia
+						  	</p>
+					</div>
+					<div class="noticiaarriba">
+						<p class="titulo">Enrevista destacado</p>
+						<img src="img/destacada3.jpg" alt="Entrevistas"/>
+							<p class="descripcion">
+            				Los supermercados Covirán siguien dando pasos en materia de
+           					responsabilidad y eficiencia
+          					</p>
+					</div>
+				</div>
+				<div id="noticiasabajo">
+					<p>Más noticias</p>
+					
+					<div class="row">
+					<div class="noticiaabajo">Mathie realiza parte del...</div>
+					<div class="noticiaabajo">Juan Bernat debuta con...</div>
+					</div>
+					<div class="row">
+					<div class="noticiaabajo">Ya puedes inscribirte en el...</div>
+					<div class="noticiaabajo">Un aficionado mexicano vive su...</div>
+				</div>
+				</div>
+			</div>
+        </div>
           <div id="derecha">
-           	<div id="clasificaciones"></div>
-           	<div id="calendario"></div>                
-          </div>
-            <div class="cb"></div>
-  </div>
-        <footer><img src="img/mediaproof-Off-.gif" width="110" height="73" alt="mediapro"><img src="img/JOMA-Off-.gif" width="110" height="78" alt="joma"><img src="img/logo_jinko-Off-.gif" width="110" height="78" alt="jinko"></footer>
+			   <div id="clasificaciones">
+				<p>Clasificaciones</p>
+				<nav>
+				<table>
+					<tr>
+						<td>1</td>
+						<td>F.C Barcelona</td>
+						<td>59</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Atlético de Madrid</td>
+						<td>50</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Real Madrid</td>
+						<td>43</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Málaga C.F</td>
+						<td>36</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Real Betis</td>
+						<td>35</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>Valencia CF</td>
+						<td>34</td>
+					</tr>
+				</table>
+				</nav>
+
+				<div id="calendario">
+					<p>Calendario</p>
+
+					<table id="calendario-table">
+						<tr>
+							<td>4:00</td>
+							<td>Celta</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Valencia</td>
+						</tr>
+						<tr>
+							<td>6:00</td>
+							<td>Valencia</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>PSG</td>
+						</tr>
+						<tr>
+							<td>8:00</td>
+							<td>Valencia</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>RCD Mallorca</td>
+						</tr>
+						<tr>
+							<td>10:00</td>
+							<td>Real Zaragoza</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Valencia</td>
+						</tr>
+					</table>
+
+				</div>
+			</div>                
+        </div>
+
+    <div class="cb"></div>
+
 </div>
+<footer><img src="img/mediaproof-Off-.gif" width="110" height="73" alt="mediapro"><img src="img/JOMA-Off-.gif" width="110" height="78" alt="joma"><img src="img/logo_jinko-Off-.gif" width="110" height="78" alt="jinko"></footer>
 </body>
 </html>
